--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -3,12 +3,9 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
-  max-width: 246px;
-  width: 100%;
+  width: 180px;
   margin: 0;
   padding: 22px 15px 25px 21px;
-  display: flex;
-  justify-content: space-between;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
