--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,7 @@
 .page {
+  margin: 0 auto;
+  max-width: 1280px;
+  min-width: 320px;
   background-color: #000000;
   width: 100%;
   height: 100%;
