--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -1,4 +1,5 @@
 .popup__save {
+  border: none;
   background-color: #000000;
   border-radius: 2px;
   color: white;
@@ -14,7 +15,7 @@
 
 .popup__save:hover {
   transition: opacity 0.2s ease;
-  opacity: 0.6;
+  opacity: 0.8;
   cursor: pointer;
 }
 
@@ -24,6 +25,6 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
-    margin: 55px 22px 40px;
+    margin: 55px 22px 25px;
   }
 }
