--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,8 +3,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
-  max-width: 336px;
-  width: 100%;
+  width: 336px;
   text-align: start;
   margin: 10px 0 0 0;
   padding: 0;
@@ -17,12 +16,19 @@
   .profile__description {
     font-size: 14px;
     line-height: 17px;
+    width: 189px;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 860px) {
   .profile__description {
     text-align: center;
     margin-bottom: 32px;
   }
  }
+
+ @media screen and (max-width: 460px) {
+  .profile__description {
+    width: 282px;
+  }
+}
