--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,3 +6,9 @@
   grid-area: info;
   justify-self: start;
 }
+
+@media screen and (max-width: 860px) {
+  .profile__info {
+    align-items: center;
+  }
+}
