--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,13 +3,10 @@
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
-  max-width: 337px;
-  width: 100%;
+  width: 295px;
   text-align: center;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: row;
   align-items: center;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -20,10 +17,11 @@
   .profile__name {
     font-size: 27px;
     line-height: 33px;
+    width: 190px;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 860px) {
   .profile__name {
     padding: 28px 0 0 20px;
   }
