--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,7 +4,7 @@
   font-weight: 500;
   line-height: 48px;
   width: 295px;
-  text-align: center;
+  text-align: left;
   margin: 0;
   padding: 0;
   align-items: center;
