--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save {
+.popup__button {
   border: none;
   background-color: #000000;
   border-radius: 2px;
@@ -6,25 +6,25 @@
   text-align: center;
   width: 358px;
   height: 50px;
-  margin: 50px 36px 39px;
+  margin: 15px 36px 39px;
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
 }
 
-.popup__save:hover {
+.popup__button:hover {
   transition: opacity 0.2s ease;
   opacity: 0.8;
   cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
-  .popup__save {
+  .popup__button {
     width: 238px;
     height: 46px;
     font-size: 14px;
     line-height: 17px;
-    margin: 55px 22px 25px;
+    margin: 15px 22px 25px;
   }
 }
