--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup__form {
   background-color: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .popup__container {
+  .popup__form {
     max-width: 282px;
   }
 }
