--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,7 +4,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   max-width: 358px;
   width: 100%;
-  margin: 32px 36px 0;
+  margin: 0 36px 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -15,6 +15,6 @@
 @media screen and (max-width: 600px) {
   .popup__input {
     max-width: 238px;
-    margin: 35px 22px 0;
+    margin: 0px 22px 0;
   }
 }
