--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,10 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
+/* content */
+
+@import url(../blocks/content/content.css);
+
 /* profile */
 
 @import url(../blocks/profile/profile.css);
@@ -57,3 +61,4 @@
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/_blackout/popup_blackout.css);
