--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -3,6 +3,10 @@
   border-radius: 50%;
   margin: 0 30px 0 0;
   grid-area: avatar;
+  z-index: -1;
+  position: relative;
+  width: 120px;
+  height: 120px;
 }
 
 @media screen and (max-width: 860px) {
