--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,6 +25,7 @@
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__fullname/profile__fullname.css');
 @import url('../blocks/profile/__name/profile__name.css');
+@import url('../blocks/profile/__edit-avatar/profile__edit-avatar.css');
 @import url('../blocks/profile/__edit/profile__edit.css');
 @import url('../blocks/profile/__description/profile__description.css');
 @import url('../blocks/profile/__add/profile__add.css');
@@ -39,6 +40,8 @@
 @import url('../blocks/card/__title/card__title.css');
 @import url('../blocks/card/__like/card__like.css');
 @import url('../blocks/card/__like/_active/card__like_active.css');
+@import url('../blocks/card/__likes/card__likes.css');
+@import url('../blocks/card/__number-like/card__number-like.css');
 
 /* footer */
 
@@ -51,6 +54,7 @@
 @import url('../blocks/popup/__form/popup__form.css');
 @import url('../blocks/popup/__close/popup__close.css');
 @import url('../blocks/popup/__title/popup__title.css');
+@import url('../blocks/popup/__title/_delete/popup__title_delete.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__input/_type/popup__input_type_error.css');
 @import url('../blocks/popup/__button/popup__button.css');
